***point: go.mod、tools/go.mod、Makefile、repository.go、_header.tpl、oas_interfaces_gen.go、schema.sql、models.gen.go、oas_request_encoders_gen.go、query.sql、usecase.go、server.go、interface.go*** ***
